@@ -1,3 +1,7 @@
+2008-06-09 Mario Limonciello <superm1@ubuntu.com>
+        * ati-packager.sh:
+        - Set LC_ALL=C before anything else rather than after printf.
+
 2008-06-05 Mario Limonciello <mario_limonciello@dell.com>
         * ati-packager.sh:
         - Check for lsb_release and synaptic rather than assuming
